package api;

syntax = "proto3";

// v1.media represents v1 of the media card
message v1.media {
  // id of this media
  string id = 1;
  // name of the media
  string name = 2;

  // CreatorType is where this media came from (where it was requested)
  enum CreatorType {
    TRELLO = 0;
    TWILIO = 1;
  }
  CreatorType creator = 3;
  // ID that correlates to creator, if needed
  string creatorId = 4;
  
  // type of the media
  enum MediaType {
    MOVIE = 0;
    TV = 1;
    MUSIC = 2;
  }
  MediaType type = 5;

  // SourceType is where this media came from
  enum SourceType {
    HTTP = 0;
    TORRENT = 1;
    FILE = 2;
  }
  SourceType source = 6;
  string sourceURI = 7;
}